add function remove favorite
